prevent overflow

--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 body, html {
   height: 100%;
   background-color: #4f6d7a;
+  overflow: hidden;
   /*background-color: #4f6d7a;*/
 }
 
